fix name of salon not present in topbar on mobile version

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@
   font-weight: normal;
 }
 
+@font-face{
+  font-family: JalalLTBold;
+  src: url('./fonts/JalalLTBold.ttf') format(opentype);
+  font-weight: bold;
+}
+
 html, body {
   width: 100%;
   overflow-x: hidden;
